--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
             align-items: center;
             height: 100vh;
             margin: 0;
+            overflow: hidden;
         }
         #timer {
-            font-size: 18em;
+            font-size: calc(25vw + 25vh);
             margin: 0;
             color: #61dafb;
             flex-grow: 1;
@@ -38,7 +39,7 @@
             max-width: 400px;
         }
         .controls button {
-            font-size: 0.8em;
+            font-size: 1.5em;
             padding: 0.5em;
             border: none;
             border-radius: 10px;
@@ -50,26 +51,35 @@
         .controls button:hover {
             background-color: #21a1f1;
         }
+        .controls button img {
+            width: 24px;
+            height: 24px;
+        }
         .settings-popup {
             display: none;
             position: fixed;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            background-color: #333;
-            padding: 1.5em;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+            background-color: #444;
+            padding: 2em;
+            border-radius: 15px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
             width: 90%;
             max-width: 400px;
-            text-align: left;
+            text-align: center;
         }
         .settings-popup label {
             margin: 0.5em 0;
             display: block;
+            font-size: 1.2em;
         }
         .settings-popup input {
             width: 100%;
+            padding: 0.5em;
+            margin-bottom: 1em;
+            border: none;
+            border-radius: 5px;
         }
         #settings-button {
             background-color: #ffa500;
@@ -77,7 +87,7 @@
         }
         #close-settings {
             margin-top: 1em;
-            padding: 0.5em;
+            padding: 0.7em;
             background-color: #61dafb;
             color: #282c34;
             border: none;
@@ -90,19 +100,19 @@
 <body>
     <div id="timer">01:00</div>
     <div class="controls">
-        <button id="settings-button">Settings</button>
-        <button id="start">Start</button>
-        <button id="pause">Pause</button>
-        <button id="reset">Reset</button>
+        <button id="settings-button"><img src="https://img.icons8.com/ios-glyphs/30/ffffff/settings.png" alt="Settings"></button>
+        <button id="start"><img src="https://img.icons8.com/ios-glyphs/30/ffffff/play.png" alt="Start"></button>
+        <button id="pause"><img src="https://img.icons8.com/ios-glyphs/30/ffffff/pause.png" alt="Pause"></button>
+        <button id="reset"><img src="https://img.icons8.com/ios-glyphs/30/ffffff/refresh.png" alt="Reset"></button>
     </div>
     <div class="settings-popup" id="settings-container">
         <h3>Settings</h3>
         <label for="timeInput">Countdown Time (seconds): </label>
-        <input type="number" id="timeInput" value="60" min="1"><br><br>
+        <input type="number" id="timeInput" value="60" min="1">
         <label for="bgColor">Background Color: </label>
-        <input type="color" id="bgColor" value="#282c34"><br><br>
+        <input type="color" id="bgColor" value="#282c34">
         <label for="timerColor">Clock Color: </label>
-        <input type="color" id="timerColor" value="#61dafb"><br><br>
+        <input type="color" id="timerColor" value="#61dafb">
         <button id="close-settings">Save Settings</button>
     </div>
     <script>
