--- a/index.html
+++ b/index.html
@@ -1,145 +1,171 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- 适配移动设备 -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <!-- 强制全屏显示，隐藏地址栏（仅适用于部分浏览器） -->
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <!-- 设置状态栏颜色 -->
     <meta name="theme-color" content="#ffffff">
+    <!-- PWA 配置 -->
     <link rel="manifest" href="manifest.json">
-    <title>Countdown Timer PWA</title>
+    <title>倒计时计时器 PWA</title>
     <style>
+        :root {
+            --bg-color: #282c34;
+            --timer-color: #61dafb;
+            --control-bg-color: #61dafb;
+            --control-hover-color: #21a1f1;
+            --control-text-color: #282c34;
+        }
         body {
             font-family: Arial, sans-serif;
             text-align: center;
             padding: 0;
-            background-color: #282c34;
+            background-color: var(--bg-color);
             color: #ffffff;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            min-height: 100vh;
             margin: 0;
             overflow: hidden;
         }
         #timer {
-            font-size: calc(35vw + 15vh);
+            font-size: calc(10vw + 10vh);
             margin: 0;
-            color: #61dafb;
+            color: var(--timer-color);
             flex-grow: 1;
             display: flex;
             justify-content: center;
             align-items: center;
+            user-select: none;
         }
         .controls {
             display: flex;
             justify-content: center;
             gap: 1em;
-            margin-top: 1em;
+            margin-bottom: 1em;
             width: 100%;
-            max-width: 400px;
+            max-width: 500px;
+            padding: 0 1em;
         }
         .controls button {
             font-size: 1.5em;
             padding: 1em;
             border: none;
             border-radius: 10px;
-            background-color: #61dafb;
-            color: #282c34;
+            background-color: var(--control-bg-color);
+            color: var(--control-text-color);
             cursor: pointer;
             flex: 1;
             display: flex;
             justify-content: center;
             align-items: center;
-            max-width: 80px;
-            max-height: 80px;
+            min-width: 60px;
+            min-height: 60px;
         }
         .controls button:hover {
-            background-color: #21a1f1;
+            background-color: var(--control-hover-color);
         }
-        .controls button img {
-            width: 48px;
-            height: 48px;
+        .controls button svg {
+            width: 32px;
+            height: 32px;
         }
         .settings-popup {
             display: none;
             position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+            inset: 0;
+            background-color: rgba(0, 0, 0, 0.8);
+            justify-content: center;
+            align-items: center;
+            padding: 1em;
+        }
+        .settings-content {
             background-color: #444;
             padding: 2em;
             border-radius: 15px;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
-            width: 90%;
+            width: 100%;
             max-width: 400px;
-            text-align: center;
+            text-align: left;
         }
-        .settings-popup label {
+        .settings-content h3 {
+            margin-top: 0;
+            color: #fff;
+        }
+        .settings-content label {
             margin: 0.5em 0;
             display: block;
-            font-size: 1.2em;
+            font-size: 1em;
+            color: #fff;
         }
-        .settings-popup input {
+        .settings-content input {
             width: 100%;
             padding: 0.5em;
             margin-bottom: 1em;
             border: none;
             border-radius: 5px;
         }
-        #settings-button {
-            background-color: #ffa500;
-            color: #282c34;
-        }
         #close-settings {
             margin-top: 1em;
             padding: 0.7em;
-            background-color: #61dafb;
-            color: #282c34;
+            background-color: var(--control-bg-color);
+            color: var(--control-text-color);
             border: none;
             border-radius: 10px;
             cursor: pointer;
             width: 100%;
-        }
-        @media (orientation: portrait) {
-            #timer {
-                font-size: calc(40vw + 20vh);
-            }
-            .controls {
-                flex-direction: row;
-            }
-        }
-        @media (orientation: landscape) {
-            #timer {
-                font-size: calc(25vw + 25vh);
-            }
         }
     </style>
 </head>
 <body>
     <div id="timer">01:00</div>
     <div class="controls">
-        <button id="settings-button"><img src="https://img.icons8.com/ios-glyphs/50/ffffff/settings.png" alt="Settings"></button>
-        <button id="start"><img src="https://img.icons8.com/ios-glyphs/50/ffffff/play.png" alt="Start"></button>
-        <button id="pause"><img src="https://img.icons8.com/ios-glyphs/50/ffffff/pause.png" alt="Pause"></button>
-        <button id="reset"><img src="https://img.icons8.com/ios-glyphs/50/ffffff/refresh.png" alt="Reset"></button>
+        <button id="settings-button" aria-label="Settings">
+            <!-- 使用内联SVG替代外部图片 -->
+            <svg viewBox="0 0 512 512">
+                <path fill="#282c34" d="..."/>
+            </svg>
+        </button>
+        <button id="start" aria-label="Start">
+            <svg viewBox="0 0 512 512">
+                <path fill="#282c34" d="..."/>
+            </svg>
+        </button>
+        <button id="pause" aria-label="Pause">
+            <svg viewBox="0 0 512 512">
+                <path fill="#282c34" d="..."/>
+            </svg>
+        </button>
+        <button id="reset" aria-label="Reset">
+            <svg viewBox="0 0 512 512">
+                <path fill="#282c34" d="..."/>
+            </svg>
+        </button>
     </div>
     <div class="settings-popup" id="settings-container">
-        <h3>Settings</h3>
-        <label for="timeInput">Countdown Time (seconds): </label>
-        <input type="number" id="timeInput" value="60" min="1">
-        <label for="bgColor">Background Color: </label>
-        <input type="color" id="bgColor" value="#282c34">
-        <label for="timerColor">Clock Color: </label>
-        <input type="color" id="timerColor" value="#61dafb">
-        <button id="close-settings">Save Settings</button>
+        <div class="settings-content">
+            <h3>设置</h3>
+            <label for="timeInput">倒计时时间（秒）：</label>
+            <input type="number" id="timeInput" value="60" min="1">
+            <label for="bgColor">背景颜色：</label>
+            <input type="color" id="bgColor" value="#282c34">
+            <label for="timerColor">计时器颜色：</label>
+            <input type="color" id="timerColor" value="#61dafb">
+            <button id="close-settings">保存设置</button>
+        </div>
     </div>
     <script>
+        // Service Worker 注册（保持不变）
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
                 navigator.serviceWorker.register('/service-worker.js').then(registration => {
-                    console.log('ServiceWorker registration successful with scope: ', registration.scope);
+                    console.log('ServiceWorker 注册成功：', registration.scope);
                 }, err => {
-                    console.log('ServiceWorker registration failed: ', err);
+                    console.log('ServiceWorker 注册失败：', err);
                 });
             });
         }
@@ -172,6 +198,7 @@
                 timer = setInterval(() => {
                     if (remainingTime <= 0) {
                         clearInterval(timer);
+                        navigator.vibrate(200);
                     } else {
                         remainingTime--;
                         updateDisplay(remainingTime);
@@ -194,21 +221,23 @@
         }
 
         function toggleSettings() {
-            settingsContainer.style.display = 'block';
+            settingsContainer.style.display = 'flex';
         }
 
         function saveSettings() {
             document.body.style.backgroundColor = bgColorInput.value;
             timerDisplay.style.color = timerColorInput.value;
+            document.documentElement.style.setProperty('--bg-color', bgColorInput.value);
+            document.documentElement.style.setProperty('--timer-color', timerColorInput.value);
             remainingTime = parseInt(timeInput.value);
             updateDisplay(remainingTime);
             settingsContainer.style.display = 'none';
         }
 
         function preventScreenSleep() {
-            if (navigator.wakeLock && navigator.wakeLock.request) {
+            if ('wakeLock' in navigator) {
                 navigator.wakeLock.request('screen').catch((err) => {
-                    console.error('Wake Lock request failed:', err);
+                    console.error('屏幕常亮请求失败：', err);
                 });
             }
         }
@@ -219,7 +248,7 @@
         pauseButton.addEventListener('click', pauseTimer);
         resetButton.addEventListener('click', resetTimer);
 
-        // Initial setup
+        // 初始设置
         resetTimer();
     </script>
 </body>
