--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
     <title>会议倒计时</title>
     <style>
         :root {
-            --bg-color: #000000;
-            --timer-color: #FFFFFF;
+            --bg-color: #1a1a1a;
+            --timer-color: #ffffff;
             --control-bg-color: transparent;
-            --control-text-color: #FFFFFF;
+            --control-text-color: #ffffff;
+            --accent-color: #ff5722;
         }
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Helvetica Neue', Arial, sans-serif;
             text-align: center;
             padding: 0;
             background-color: var(--bg-color);
@@ -34,7 +35,7 @@
             overflow: hidden;
         }
         #timer {
-            font-size: calc(80vh);
+            font-size: calc(20vh);
             margin: 0;
             color: var(--timer-color);
             flex-grow: 1;
@@ -43,6 +44,11 @@
             align-items: center;
             line-height: 1;
             user-select: none;
+        }
+        @media (orientation: landscape) {
+            #timer {
+                font-size: calc(20vw);
+            }
         }
         .controls {
             display: flex;
@@ -66,6 +72,9 @@
             width: 40px;
             height: 40px;
         }
+        .controls button:hover {
+            color: var(--accent-color);
+        }
         .controls button svg {
             width: 24px;
             height: 24px;
@@ -78,9 +87,10 @@
             justify-content: center;
             align-items: center;
             padding: 1em;
+            z-index: 1000;
         }
         .settings-content {
-            background-color: #444;
+            background-color: #2c2c2c;
             padding: 1em;
             border-radius: 10px;
             width: 100%;
@@ -104,13 +114,15 @@
             margin-bottom: 0.5em;
             border: none;
             border-radius: 5px;
+            background-color: #444;
+            color: #fff;
         }
         #close-settings {
             margin-top: 1em;
             padding: 0.5em;
-            background-color: var(--control-bg-color);
-            color: var(--control-text-color);
-            border: 1px solid #fff;
+            background-color: var(--accent-color);
+            color: #fff;
+            border: none;
             border-radius: 5px;
             cursor: pointer;
             width: 100%;
@@ -122,7 +134,8 @@
     <div class="controls">
         <button id="settings-button" aria-label="设置">
             <svg viewBox="0 0 24 24">
-                <path fill="currentColor" d="M12,8A4,4 0 1,1 8,12A4,4 0 0,1 12,8M3,12A9,9 0 0,1 12,3A9,9 0 0,1 21,12A9,9 0 0,1 12,21A9,9 0 0,1 3,12Z" />
+                <!-- 齿轮图标 -->
+                <path fill="currentColor" d="M12,15.5A3.5,3.5 0 1,1 15.5,12A3.5,3.5 0 0,1 12,15.5M19.43,12.97L21.6,11.1L19.7,8.3L17.13,8.56C16.96,7.94 16.7,7.36 16.37,6.82L17.68,4.71L15.07,3.13L13.8,5.15C13.27,4.95 12.67,4.83 12,4.83C11.33,4.83 10.73,4.95 10.2,5.15L8.93,3.13L6.32,4.71L7.63,6.82C7.3,7.36 7.04,7.94 6.87,8.56L4.3,8.3L2.4,11.1L4.57,12.97C4.54,13.31 4.5,13.65 4.5,14C4.5,14.35 4.54,14.69 4.57,15.03L2.4,16.9L4.3,19.7L6.87,19.44C7.04,20.06 7.3,20.64 7.63,21.18L6.32,23.29L8.93,24.87L10.2,22.85C10.73,23.05 11.33,23.17 12,23.17C12.67,23.17 13.27,23.05 13.8,22.85L15.07,24.87L17.68,23.29L16.37,21.18C16.7,20.64 16.96,20.06 17.13,19.44L19.7,19.7L21.6,16.9L19.43,15.03C19.46,14.69 19.5,14.35 19.5,14C19.5,13.65 19.46,13.31 19.43,12.97Z" />
             </svg>
         </button>
         <button id="start" aria-label="开始">
@@ -147,9 +160,9 @@
             <label for="timeInput">倒计时时间（秒）：</label>
             <input type="number" id="timeInput" value="60" min="1">
             <label for="bgColor">背景颜色：</label>
-            <input type="color" id="bgColor" value="#000000">
+            <input type="color" id="bgColor" value="#1a1a1a">
             <label for="timerColor">计时器颜色：</label>
-            <input type="color" id="timerColor" value="#FFFFFF">
+            <input type="color" id="timerColor" value="#ffffff">
             <button id="close-settings">保存设置</button>
         </div>
     </div>
