--- a/index.html
+++ b/index.html
@@ -2,17 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#ffffff">
+    <!-- Adapt to mobile devices -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <!-- Force full-screen display, hide address bar (only applies to some browsers) -->
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <!-- Set status bar color -->
+    <meta name="theme-color" content="#000000">
+    <!-- PWA Configuration -->
     <link rel="manifest" href="manifest.json">
-    <title>Event Countdown Timer</title>
+    <title>Countdown Timer</title>
     <style>
+        :root {
+            --bg-color: #000000;
+            --timer-color: #FFFFFF;
+            --control-bg-color: transparent;
+            --control-text-color: #FFFFFF;
+            --accent-color: #ff5722;
+        }
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Helvetica Neue', Arial, sans-serif;
             text-align: center;
             padding: 0;
-            background-color: #282c34;
-            color: #ffffff;
+            background-color: var(--bg-color);
+            color: var(--timer-color);
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -22,124 +35,144 @@
             overflow: hidden;
         }
         #timer {
-            font-size: calc(50vw + 25vh);
+            font-size: calc(80vmin);
             margin: 0;
-            color: #61dafb;
-            flex-grow: 1;
+            color: var(--timer-color);
             display: flex;
             justify-content: center;
             align-items: center;
+            line-height: 1;
+            user-select: none;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
         }
         .controls {
+            position: absolute;
+            bottom: 10px;
+            left: 50%;
+            transform: translateX(-50%);
             display: flex;
             justify-content: center;
             gap: 1em;
-            margin-top: 1em;
-            width: 100%;
-            max-width: 400px;
+            width: auto;
+            padding: 0 1em;
         }
         .controls button {
-            font-size: 1.5em;
-            padding: 1em;
+            font-size: 1em;
+            padding: 0.5em;
             border: none;
-            border-radius: 10px;
-            background-color: #61dafb;
-            color: #282c34;
+            background-color: var(--control-bg-color);
+            color: var(--control-text-color);
             cursor: pointer;
-            flex: 1;
             display: flex;
             justify-content: center;
             align-items: center;
-            max-width: 80px;
-            max-height: 80px;
+            width: 40px;
+            height: 40px;
         }
         .controls button:hover {
-            background-color: #21a1f1;
+            color: var(--accent-color);
         }
-        .controls button img {
-            width: 48px;
-            height: 48px;
+        .controls button svg {
+            width: 24px;
+            height: 24px;
         }
         .settings-popup {
             display: none;
             position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: #444;
-            padding: 2em;
-            border-radius: 15px;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
-            width: 90%;
-            max-width: 400px;
+            inset: 0;
+            background-color: rgba(0, 0, 0, 0.8);
+            justify-content: center;
+            align-items: center;
+            padding: 1em;
+            z-index: 1000;
+        }
+        .settings-content {
+            background-color: #2c2c2c;
+            padding: 1em;
+            border-radius: 10px;
+            width: 100%;
+            max-width: 300px;
+            text-align: left;
+        }
+        .settings-content h3 {
+            margin-top: 0;
+            color: #fff;
             text-align: center;
         }
-        .settings-popup label {
+        .settings-content label {
             margin: 0.5em 0;
             display: block;
-            font-size: 1.2em;
+            font-size: 1em;
+            color: #fff;
         }
-        .settings-popup input {
+        .settings-content input {
             width: 100%;
-            padding: 0.5em;
-            margin-bottom: 1em;
+            padding: 0.3em;
+            margin-bottom: 0.5em;
             border: none;
             border-radius: 5px;
-        }
-        #settings-button {
-            background-color: #ffa500;
-            color: #282c34;
+            background-color: #444;
+            color: #fff;
         }
         #close-settings {
             margin-top: 1em;
-            padding: 0.7em;
-            background-color: #61dafb;
-            color: #282c34;
+            padding: 0.5em;
+            background-color: var(--accent-color);
+            color: #fff;
             border: none;
-            border-radius: 10px;
+            border-radius: 5px;
             cursor: pointer;
             width: 100%;
-        }
-        @media (orientation: portrait) {
-            #timer {
-                font-size: calc(40vw + 20vh);
-            }
-            .controls {
-                flex-direction: row;
-            }
-        }
-        @media (orientation: landscape) {
-            #timer {
-                font-size: calc(25vw + 25vh);
-            }
         }
     </style>
 </head>
 <body>
     <div id="timer">01:00</div>
     <div class="controls">
-        <button id="settings-button"><img src="https://img.icons8.com/material-rounded/50/ffffff/settings.png" alt="Settings"></button>
-        <button id="start"><img src="https://img.icons8.com/ios-glyphs/50/ffffff/play.png" alt="Start"></button>
-        <button id="pause"><img src="https://img.icons8.com/ios-glyphs/50/ffffff/pause.png" alt="Pause"></button>
-        <button id="reset"><img src="https://img.icons8.com/ios-glyphs/50/ffffff/refresh.png" alt="Reset"></button>
+        <button id="settings-button" aria-label="Settings">
+            <svg viewBox="0 0 24 24">
+                <!-- Gear icon -->
+                <path fill="currentColor" d="M12 15.5C13.93 15.5 15.5 13.93 15.5 12S13.93 8.5 12 8.5 8.5 10.07 8.5 12 10.07 15.5 12 15.5M19.43 12.97C19.46 12.65 19.5 12.33 19.5 12S19.46 11.35 19.43 11.03L21.5 9.9 19.95 7.05 17.75 7.5C17.32 6.85 16.77 6.27 16.13 5.75L16.5 3.5 13.5 2 12 4.5C11.67 4.5 11.33 4.5 11 4.5S10.33 4.5 10 4.5L8.5 2 5.5 3.5 5.87 5.75C5.23 6.27 4.68 6.85 4.25 7.5L2.05 7.05 0.5 9.9 2.57 11.03C2.54 11.35 2.5 11.67 2.5 12S2.54 12.65 2.57 12.97L0.5 14.1 2.05 16.95 4.25 16.5C4.68 17.15 5.23 17.73 5.87 18.25L5.5 20.5 8.5 22 10 19.5C10.33 19.5 10.67 19.5 11 19.5S11.67 19.5 12 19.5L13.5 22 16.5 20.5 16.13 18.25C16.77 17.73 17.32 17.15 17.75 16.5L19.95 16.95 21.5 14.1 19.43 12.97Z" />
+            </svg>
+        </button>
+        <button id="start" aria-label="Start">
+            <svg viewBox="0 0 24 24">
+                <path fill="currentColor" d="M8 5v14l11-7z"/>
+            </svg>
+        </button>
+        <button id="pause" aria-label="Pause">
+            <svg viewBox="0 0 24 24">
+                <path fill="currentColor" d="M6 19h4V5H6v14zm8-14v14h4V5h-4z"/>
+            </svg>
+        </button>
+        <button id="reset" aria-label="Reset">
+            <svg viewBox="0 0 24 24">
+                <path fill="currentColor" d="M13 3a9 9 0 0 1 0 18c-4.97 0-9-4.03-9-9H1l4-4 4 4H6a7 7 0 1 0 7-7V3z"/>
+            </svg>
+        </button>
     </div>
     <div class="settings-popup" id="settings-container">
-        <h3>Settings</h3>
-        <label for="timeInput">Countdown Time (seconds): </label>
-        <input type="number" id="timeInput" value="60" min="1">
-        <label for="bgColor">Background Color: </label>
-        <input type="color" id="bgColor" value="#282c34">
-        <label for="timerColor">Clock Color: </label>
-        <input type="color" id="timerColor" value="#61dafb">
-        <button id="close-settings">Save Settings</button>
+        <div class="settings-content">
+            <h3>Settings</h3>
+            <label for="timeInput">Countdown Time (seconds):</label>
+            <input type="number" id="timeInput" value="60" min="1">
+            <label for="bgColor">Background Color:</label>
+            <input type="color" id="bgColor" value="#1a1a1a">
+            <label for="timerColor">Timer Color:</label>
+            <input type="color" id="timerColor" value="#ffffff">
+            <button id="close-settings">Save Settings</button>
+        </div>
     </div>
     <script>
+        // Service Worker registration (unchanged)
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
                 navigator.serviceWorker.register('/service-worker.js').then(registration => {
-                    console.log('ServiceWorker registration successful with scope: ', registration.scope);
+                    console.log('ServiceWorker registration successful with scope:', registration.scope);
                 }, err => {
-                    console.log('ServiceWorker registration failed: ', err);
+                    console.log('ServiceWorker registration failed:', err);
                 });
             });
         }
@@ -172,6 +205,7 @@
                 timer = setInterval(() => {
                     if (remainingTime <= 0) {
                         clearInterval(timer);
+                        navigator.vibrate(500);
                     } else {
                         remainingTime--;
                         updateDisplay(remainingTime);
@@ -194,21 +228,23 @@
         }
 
         function toggleSettings() {
-            settingsContainer.style.display = 'block';
+            settingsContainer.style.display = 'flex';
         }
 
         function saveSettings() {
             document.body.style.backgroundColor = bgColorInput.value;
             timerDisplay.style.color = timerColorInput.value;
+            document.documentElement.style.setProperty('--bg-color', bgColorInput.value);
+            document.documentElement.style.setProperty('--timer-color', timerColorInput.value);
             remainingTime = parseInt(timeInput.value);
             updateDisplay(remainingTime);
             settingsContainer.style.display = 'none';
         }
 
         function preventScreenSleep() {
-            if (navigator.wakeLock && navigator.wakeLock.request) {
+            if ('wakeLock' in navigator) {
                 navigator.wakeLock.request('screen').catch((err) => {
-                    console.error('Wake Lock request failed:', err);
+                    console.error('Screen wake lock request failed:', err);
                 });
             }
         }
