--- a/index.html
+++ b/index.html
@@ -22,19 +22,23 @@
             --control-text-color: #FFFFFF;
             --accent-color: #ff5722;
         }
+        html,
+        body {
+            width: 100%;
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            overflow: auto;
+        }
         body {
             font-family: 'Helvetica Neue', Arial, sans-serif;
             text-align: center;
-            padding: 0;
             background-color: var(--bg-color);
             color: var(--timer-color);
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            height: 100vh;
-            margin: 0;
-            overflow: hidden;
         }
         #timer {
             font-size: calc(80vmin);
@@ -47,11 +51,10 @@
             user-select: none;
             width: 100%;
             height: 100%;
-            overflow: hidden;
         }
         .controls {
-            position: absolute;
-            bottom: 80px;
+            position: fixed;
+            bottom: 20px;
             left: 50%;
             transform: translateX(-50%);
             display: flex;
@@ -86,11 +89,13 @@
             bottom: 0;
             left: 0;
             right: 0;
+            top: 0;
             background-color: rgba(0, 0, 0, 0.9);
             justify-content: center;
             align-items: center;
             padding: 1em;
             z-index: 1000;
+            overflow-y: auto;
         }
         .settings-content {
             background-color: #2c2c2c;
@@ -132,8 +137,8 @@
         }
         /* Install button styles */
         #install-button {
-            position: absolute;
-            bottom: 140px;
+            position: fixed;
+            bottom: 80px;
             left: 50%;
             transform: translateX(-50%);
             padding: 10px 20px;
@@ -151,7 +156,7 @@
             body {
                 min-height: 100%;
                 max-height: 100%;
-                overflow: hidden;
+                overflow: auto;
             }
         }
     </style>
@@ -297,25 +302,3 @@
             document.documentElement.style.setProperty('--timer-color', timerColorInput.value);
             remainingTime = parseInt(timeInput.value);
             updateDisplay(remainingTime);
-            settingsContainer.style.display = 'none';
-        }
-
-        function preventScreenSleep() {
-            if ('wakeLock' in navigator) {
-                navigator.wakeLock.request('screen').catch((err) => {
-                    console.error('Screen wake lock request failed:', err);
-                });
-            }
-        }
-
-        settingsButton.addEventListener('click', toggleSettings);
-        closeSettingsButton.addEventListener('click', saveSettings);
-        startButton.addEventListener('click', startTimer);
-        pauseButton.addEventListener('click', pauseTimer);
-        resetButton.addEventListener('click', resetTimer);
-
-        // Initial setup
-        resetTimer();
-    </script>
-</body>
-</html>
